# zmk-config-prospector

./: CMakeLists.txt  README.md  build.yaml  west.yml
.github/workflows/: build.yaml  build.yml
app/: CMakeLists.txt  prj.conf
app/include/display/widgets/: bongo_cat.h
app/include/display/widgets/boards/shields/dongle_display_view/widgets/: bongo_cat.h
app/include/display/widgets/boards/shields/dongle_display_view/widgets/boards/shields/dongle_display_view/widgets/app/src/display/widgets/: bongo_cat_images.c
app/src/display/: status_screen.c
app/src/display/widgets/: bongo_cat.h
config/: CMakeLists.txt  Kconfig  prospector_adapter.conf  prospector_scanner.conf  prospector_scanner.keymap  prospector_scanner.overlay  west.yml
config/boards/: seeeduino_xiao_ble.overlay
